test/testdata/string/escape_incomplete_error.lox
// syntaxerror
// error: unterminated string literal
// lint error: unterminated string literal
// error: invalid escape sequence
// lint error: invalid escape sequence
print "\";
